--- a/index.html
+++ b/index.html
@@ -125,26 +125,43 @@
                         <div class="lista-tareas">
                             <ul class="web">
                                 <li><a href="http://morenoyasociados.com.ar/" target="_blank"><img
-                                            src="img/estudiowebm.png" alt=""></a>Estudio Moreno y Asociados </li>
+                                            src="img/estudiowebm.png" alt=""></a>
+                                    <br>
+                                    Estudio Moreno y Asociados</li>
                                 <li><a href="https://rociojua.netlify.com/" target="_blank"><img src="img/rojuawebm.png"
-                                            alt=""></a>Portfolio Fotografia Rocio Juarez</li>
+                                            alt=""></a>
+                                    <br>
+                                    Portfolio Fotografia Rocio Juarez</li>
 
                                 <li><a href="https://buscacinereact.netlify.app" target="_blank"><img
-                                            src="img/buscareactwebm.png" alt=""></a>BuscaCine React App
+                                            src="img/buscareactwebm.png" alt=""></a>
+                                    <br>
+                                    BuscaCine React App
                                 </li>
                             </ul>
                             <ul class="web">
-                                <li><a href="https://namesgen.netlify.app/" target="_blank"><img
-                                            src="img/nameswebm.png" alt=""></a>Names Generator</li>
+                                <li><a href="https://vidpiaweb.netlify.app/" target="_blank"><img
+                                            src="img/vidpiawebm.png" alt=""></a>
+                                    <br>
+                                    Vidpia Vidrios Piazze</li>
+                                <li>
+                                    <a href="https://namesgen.netlify.app/" target="_blank"><img src="img/nameswebm.png"
+                                            alt=""></a>
+                                    <br>
+                                    Names Generator
+                                </li>
                                 <li><a href="https://frontstore.netlify.app" target="_blank"><img
                                             src="img/frontstoreweb.png" alt=""></a>
+                                    <br>
                                     FrontEnd Store</li>
-                                <li><a href="https://keydrumsweb.netlify.app/" target="_blank"><img
-                                            src="img/drumswebm.png" alt=""></a>Drums Keyboard Web</li>
+
                             </ul>
                             <ul class="web">
-                                <li><a href="https://vidpiaweb.netlify.app/" target="_blank"><img
-                                            src="img/vidpiawebm.png" alt=""></a>Vidpia Vidrios Piazze</li>
+                                <li><a href="https://keydrumsweb.netlify.app/" target="_blank"><img
+                                            src="img/drumswebm.png" alt=""></a>
+                                    <br>
+                                    Drums Keyboard Web</li>
+
                             </ul>
                         </div>
                     </div>
