--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <h2>Administrative Accounting Senior</h2>
                         <h3>Estudio Moreno y Asociados</h3>
                         <p>02-2015 - Today</p>
-                        <div class="lista-tareas">
+                        <div class="lista-tareas-account">
                             <ul>
                                 <li>Accountability Indexs <a href="https://github.com/pinomartin/indicesEECCapp"
                                         target="_blank">App</a></li>
