Adicion de Nueva Web

--- a/index.html
+++ b/index.html
@@ -144,23 +144,27 @@
                                             src="img/vidpiawebm.png" alt=""></a>
                                     <br>
                                     Vidpia Vidrios Piazze</li>
+                                <li><a href="https://gimmekitty.netlify.app/" target="_blank"><img
+                                            src="img/gimmeKitty.png" alt="Gimme Kitty App"></a>
+                                    <br>
+                                    Gimme a Kitty</li>
                                 <li>
                                     <a href="https://namesgen.netlify.app/" target="_blank"><img src="img/nameswebm.png"
                                             alt=""></a>
                                     <br>
                                     Names Generator
                                 </li>
-                                <li><a href="https://frontstore.netlify.app" target="_blank"><img
-                                            src="img/frontstoreweb.png" alt=""></a>
-                                    <br>
-                                    FrontEnd Store</li>
-
                             </ul>
                             <ul class="web">
                                 <li><a href="https://keydrumsweb.netlify.app/" target="_blank"><img
                                             src="img/drumswebm.png" alt=""></a>
                                     <br>
                                     Drums Keyboard Web</li>
+
+                                <li><a href="https://frontstore.netlify.app" target="_blank"><img
+                                            src="img/frontstoreweb.png" alt=""></a>
+                                    <br>
+                                    FrontEnd Store</li>
 
                             </ul>
                         </div>
@@ -196,9 +200,9 @@
                 <a id="github" href="https://github.com/pinomartin" target="_blank"><i class="fab fa-github"></i></a>
                 <a id="cv" href="https://drive.google.com/file/d/1zjAWQwpfijKoT9tbVXRzxxKMCCJ6PzU7/view?usp=sharing"
                     target="_blank"><i class="far fa-file-alt"></i></a>
-                <a id="whatsapp"
+                <!-- <a id="whatsapp"
                     href="https://api.whatsapp.com/send?phone=543517704193&text=Hola%20Mart%C3%ADn%20!%20Me%20interesa%20saber%20m%C3%A1s%20de%20ti"
-                    target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    target="_blank"><i class="fab fa-whatsapp"></i></a> -->
             </div>
             <div class="espacio">
 
