Add Proyecto Mis Notas

--- a/index.html
+++ b/index.html
@@ -128,34 +128,39 @@
                                             src="img/estudiowebm.png" alt=""></a>
                                     <br>
                                     Estudio Moreno y Asociados</li>
-                                <li><a href="https://rociojua.netlify.com/" target="_blank"><img src="img/rojuawebm.png"
+                                <li><a href="https://gimmekitty.netlify.app/" target="_blank"><img
+                                            src="img/gimmeKitty.png" alt="Gimme Kitty App"></a>
+                                    <br>
+                                    Gimme a Kitty</li>
+                                <li>
+                                    <a href="https://misnotas.netlify.app/" target="_blank"><img src="img/misnotasm.png"
                                             alt=""></a>
                                     <br>
-                                    Portfolio Fotografia Rocio Juarez</li>
-
+                                    Mis Notas
+                                </li>
+                            </ul>
+                            <ul class="web">
                                 <li><a href="https://buscacinereact.netlify.app" target="_blank"><img
                                             src="img/buscareactwebm.png" alt=""></a>
                                     <br>
                                     BuscaCine React App
                                 </li>
-                            </ul>
-                            <ul class="web">
                                 <li><a href="https://vidpiaweb.netlify.app/" target="_blank"><img
                                             src="img/vidpiawebm.png" alt=""></a>
                                     <br>
                                     Vidpia Vidrios Piazze</li>
-                                <li><a href="https://gimmekitty.netlify.app/" target="_blank"><img
-                                            src="img/gimmeKitty.png" alt="Gimme Kitty App"></a>
+                                <li><a href="https://rociojua.netlify.com/" target="_blank"><img src="img/rojuawebm.png"
+                                            alt=""></a>
                                     <br>
-                                    Gimme a Kitty</li>
+                                    Portfolio Fotografia Rocio Juarez</li>
+                            </ul>
+                            <ul class="web">
                                 <li>
                                     <a href="https://namesgen.netlify.app/" target="_blank"><img src="img/nameswebm.png"
                                             alt=""></a>
                                     <br>
                                     Names Generator
                                 </li>
-                            </ul>
-                            <ul class="web">
                                 <li><a href="https://keydrumsweb.netlify.app/" target="_blank"><img
                                             src="img/drumswebm.png" alt=""></a>
                                     <br>
